Added support for float and double with same conversion as mapped fd types
Signed-off-by: expani <anijainc@amazon.com>